--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "k-progress": "^1.5.0",
+    "k-progress-v3": "^1.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuejs-progress-bar": "^1.2.8",
